# fano-garden

./: .gitignore  AGENTS.md  CI.md  CONTRACT.md  README.md  RELEASE.md
.github/: swarm-routing.json
.github/workflows/: interop.yml  pages.yml  swarm-router.yml
dev-docs/: 2026-02-20-Branch_·_Yes_No_Stop_Communication.md  reference-implementation-browser-v1.md  reference-implementation-glossary.md  reference-implementation-posix-haskell-v1.md  reference-implementation-schemas.ndjson.md  reference-implementation-test-plan.md
docs/: README.md  audit-v1-alignment.md  index.html
docs/assets/demo/: app.js  commit.js  identity.js  merge.js  runtime.js
docs/assets/site/: base-path.js  styles.css
docs/demo/: index.html
docs/quickstart/: index.html
docs/reference/: index.html
docs/reference/browser-v1/: index.html
docs/reference/glossary/: index.html
docs/reference/schemas/: index.html
docs/reference/test-plan/: index.html
runtime/browser-v1/: README.md  canonicalize.js  constants.js  dev-server.mjs  identity.js  index.js  invariants.js  merge.js  ndjson.js  projection.js  svgParser.js  webrtc.js
runtime/browser-v1/demo/: app.js  index.html
runtime/browser-v1/tests/: logical-clock.mjs  merkle-ordering.mjs  merkle.mjs  signature-hooks.mjs  smoke.mjs
runtime/posix-haskell/: README.md  ulp-runtime.cabal
runtime/posix-haskell/app/: Main.hs
runtime/posix-haskell/src/ULP/: Canonical.hs  Merge.hs  Merkle.hs  NDJSON.hs  Runtime.hs  Storage.hs  Types.hs  Validate.hs
scripts/: check-docs-demo-sync.sh
