cabal-version:      2.4
name:               ulp-runtime
version:            0.1.0.0
synopsis:           POSIX/Haskell reference runtime for ULP commits
build-type:         Simple
license:            MIT
author:             Brian Thorne
maintainer:         n/a
category:           Distributed Systems

library
  hs-source-dirs:      src
  exposed-modules:
      ULP.Types
    , ULP.Canonical
    , ULP.Merkle
    , ULP.NDJSON
    , ULP.Validate
    , ULP.Merge
    , ULP.Storage
    , ULP.Runtime
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base >=4.15 && <5
    , aeson >=2.0 && <2.3
    , bytestring >=0.10
    , text >=1.2
    , containers >=0.6
    , directory >=1.3
    , filepath >=1.4
    , time >=1.9
    , cryptonite >=0.29

executable ulp-runtime
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base >=4.15 && <5
    , ulp-runtime
    , aeson >=2.0 && <2.3
    , bytestring >=0.10
    , text >=1.2
    , directory >=1.3
    , filepath >=1.4
    , time >=1.9
